# taskchampion-py

./: Cargo.toml
.github/workflows/: checks.yml  ci.yml  tests.yml
src/: access_mode.rs  operation.rs  operations.rs
src/task/: annotation.rs  status.rs
