[package]
name = "taskchampion-py"
version = "2.0.2"
edition = "2021"
# This should match the MSRV of the `taskchampion` crate.
rust-version = "1.83.0"

[package.metadata.maturin]
name = "taskchampion"

[lib]
name = "taskchampion"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.28", features = ["chrono"] }
chrono = "*"
taskchampion = { version = "=2.0.2" }
